crates/pg_syntax/tests/snapshots/postgres_regress/rangetypes@2.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '-[a,z)'::textrange;"
---
SelectStmt@0..27
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..26
    TypeCast@7..26
      AConst@7..15
        Sconst@7..15 "'-[a,z)'"
      Typecast@15..17 "::"
      TypeName@17..26
        Ident@17..26 "textrange"
  Ascii59@26..27 ";"

