crates/pg_syntax/tests/snapshots/postgres_regress/rangetypes@20.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '[\",\",\",\"]'::textrange;"
---
SelectStmt@0..30
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..29
    TypeCast@7..29
      AConst@7..18
        Sconst@7..18 "'[\",\",\",\"]'"
      Typecast@18..20 "::"
      TypeName@20..29
        Ident@20..29 "textrange"
  Ascii59@29..30 ";"

