crates/pg_syntax/tests/snapshots/postgres_regress/rangetypes@200.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select count(*) from test_range_gist where ir @> int4multirange(int4range(10,20), int4range(30,40));"
---
SelectStmt@0..100
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..14
    FuncCall@7..14
      Ident@7..12 "count"
      Ascii40@12..13 "("
      Ascii42@13..14 "*"
  Ascii41@14..15 ")"
  Whitespace@15..16 " "
  From@16..20 "from"
  Whitespace@20..21 " "
  RangeVar@21..36
    Ident@21..36 "test_range_gist"
  Whitespace@36..37 " "
  Where@37..42 "where"
  Whitespace@42..43 " "
  AExpr@43..97
    ColumnRef@43..45
      Ident@43..45 "ir"
    Whitespace@45..46 " "
    Op@46..48 "@>"
    Whitespace@48..49 " "
    FuncCall@49..97
      Ident@49..63 "int4multirange"
      Ascii40@63..64 "("
      FuncCall@64..79
        Ident@64..73 "int4range"
        Ascii40@73..74 "("
        AConst@74..76
          Iconst@74..76 "10"
        Ascii44@76..77 ","
        AConst@77..79
          Iconst@77..79 "20"
      Ascii41@79..80 ")"
      Ascii44@80..81 ","
      Whitespace@81..82 " "
      FuncCall@82..97
        Ident@82..91 "int4range"
        Ascii40@91..92 "("
        AConst@92..94
          Iconst@92..94 "30"
        Ascii44@94..95 ","
        AConst@95..97
          Iconst@95..97 "40"
  Ascii41@97..98 ")"
  Ascii41@98..99 ")"
  Ascii59@99..100 ";"

