crates/pg_syntax/tests/snapshots/postgres_regress/rangetypes@223.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select count(*) from test_range_gist where ir && '{(10,20),(30,40),(50,60)}'::int4multirange;"
---
SelectStmt@0..93
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..14
    FuncCall@7..14
      Ident@7..12 "count"
      Ascii40@12..13 "("
      Ascii42@13..14 "*"
  Ascii41@14..15 ")"
  Whitespace@15..16 " "
  From@16..20 "from"
  Whitespace@20..21 " "
  RangeVar@21..36
    Ident@21..36 "test_range_gist"
  Whitespace@36..37 " "
  Where@37..42 "where"
  Whitespace@42..43 " "
  AExpr@43..92
    ColumnRef@43..45
      Ident@43..45 "ir"
    Whitespace@45..46 " "
    Op@46..48 "&&"
    Whitespace@48..49 " "
    TypeCast@49..92
      AConst@49..76
        Sconst@49..76 "'{(10,20),(30,40),(50 ..."
      Typecast@76..78 "::"
      TypeName@78..92
        Ident@78..92 "int4multirange"
  Ascii59@92..93 ";"

