crates/pg_syntax/tests/snapshots/postgres_regress/rangetypes@229.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select count(*) from test_range_gist where ir -|- int4multirange(int4range(100,200), int4range(400,500));"
---
SelectStmt@0..105
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..14
    FuncCall@7..14
      Ident@7..12 "count"
      Ascii40@12..13 "("
      Ascii42@13..14 "*"
  Ascii41@14..15 ")"
  Whitespace@15..16 " "
  From@16..20 "from"
  Whitespace@20..21 " "
  RangeVar@21..36
    Ident@21..36 "test_range_gist"
  Whitespace@36..37 " "
  Where@37..42 "where"
  Whitespace@42..43 " "
  AExpr@43..102
    ColumnRef@43..45
      Ident@43..45 "ir"
    Whitespace@45..46 " "
    Op@46..49 "-|-"
    Whitespace@49..50 " "
    FuncCall@50..102
      Ident@50..64 "int4multirange"
      Ascii40@64..65 "("
      FuncCall@65..82
        Ident@65..74 "int4range"
        Ascii40@74..75 "("
        AConst@75..78
          Iconst@75..78 "100"
        Ascii44@78..79 ","
        AConst@79..82
          Iconst@79..82 "200"
      Ascii41@82..83 ")"
      Ascii44@83..84 ","
      Whitespace@84..85 " "
      FuncCall@85..102
        Ident@85..94 "int4range"
        Ascii40@94..95 "("
        AConst@95..98
          Iconst@95..98 "400"
        Ascii44@98..99 ","
        AConst@99..102
          Iconst@99..102 "500"
  Ascii41@102..103 ")"
  Ascii41@103..104 ")"
  Ascii59@104..105 ";"

